adding changing colors on hover

--- a/3 - Dashboard for Training Neutral Networks.ipynb
+++ b/3 - Dashboard for Training Neutral Networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -113,72 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e40a6926f8a4990979d4b1029b4f1bc",
-       "version_major": "2",
-       "version_minor": "0"
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/15\n",
-      "4s - loss: 0.5426 - acc: 0.7708\n",
-      "Epoch 2/15\n",
-      "3s - loss: 0.3980 - acc: 0.8954\n",
-      "Epoch 3/15\n",
-      "4s - loss: 0.3133 - acc: 0.9260\n",
-      "Epoch 4/15\n",
-      "3s - loss: 0.2651 - acc: 0.9326\n",
-      "Epoch 5/15\n",
-      "3s - loss: 0.2376 - acc: 0.9341\n",
-      "Epoch 6/15\n",
-      "4s - loss: 0.2210 - acc: 0.9347\n",
-      "Epoch 7/15\n",
-      "5s - loss: 0.2115 - acc: 0.9349\n",
-      "Epoch 8/15\n",
-      "4s - loss: 0.2049 - acc: 0.9351\n",
-      "Epoch 9/15\n",
-      "3s - loss: 0.2002 - acc: 0.9353\n",
-      "Epoch 10/15\n",
-      "3s - loss: 0.1969 - acc: 0.9356\n",
-      "Epoch 11/15\n",
-      "3s - loss: 0.1951 - acc: 0.9359\n",
-      "Epoch 12/15\n",
-      "4s - loss: 0.1931 - acc: 0.9357\n",
-      "Epoch 13/15\n",
-      "4s - loss: 0.1921 - acc: 0.9359\n",
-      "Epoch 14/15\n",
-      "3s - loss: 0.1910 - acc: 0.9358\n",
-      "Epoch 15/15\n",
-      "3s - loss: 0.1901 - acc: 0.9357\n",
-      "       accuracy       auc  precision    recall\n",
-      "Train  0.936400  0.846488   0.584493  0.167569\n",
-      "Test   0.936822  0.847155   0.592385  0.175864\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Training the model.\n",
     "num_epochs = 15\n",
@@ -295,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -395,26 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "418cff25299e4bb884c0b2de9b61d7b1",
-       "version_major": "2",
-       "version_minor": "0"
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def update_bar_chart(layer, node):\n",
     "    epoch = epoch_slider.value\n",
@@ -441,6 +365,8 @@
     "\n",
     "def hovered_change(change):\n",
     "    point_index = change['new']\n",
+    "    set_colors(point_index)\n",
+    "    \n",
     "    if point_index is None:\n",
     "        return\n",
     "    else:\n",
@@ -451,20 +377,27 @@
     "                point_index = point_index - n\n",
     "        if i > 0:\n",
     "            update_bar_chart(i, point_index)\n",
+    "            \n",
+    "def set_colors(index):\n",
+    "    link_data_new = []\n",
+    "    count = 0\n",
+    "    for v in nn.graph.link_data:\n",
+    "        v_new = {}\n",
+    "        v_new['source'] = v['source']\n",
+    "        v_new['target'] = v['target']\n",
+    "        if v['target'] == index:\n",
+    "            v_new['value'] = (count % 11) + 1\n",
+    "            count = count + 1\n",
+    "        else:\n",
+    "            v_new['value'] = 0\n",
+    "        link_data_new.append(v_new)\n",
+    "    nn.graph.link_data = link_data_new\n",
+    "        \n",
     "    \n",
     "nn.graph.observe(hovered_change, 'hovered_point')\n",
     "\n",
     "VBox([controls, nn], layout=Layout(min_height='1000px'))    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -484,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
