--- a/3 - Dashboard for Training Neutral Networks - Gluon.ipynb
+++ b/3 - Dashboard for Training Neutral Networks - Gluon.ipynb
@@ -140,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "auc_fig = plt.figure(title='Train and Test AUC Score', legend_location='top-left')\n",
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -170,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8144f6361d054ae39b62ac6293fc38aa",
+       "model_id": "1d6fdf17c0b74325938864edac98a986",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -282,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8f11d2d74084a9d9a7fc39dd89c9e85",
+       "model_id": "57702fa705cb430f9507c203247c3131",
        "version_major": 2,
        "version_minor": 0
       },
