changing color scheme for white

--- a/7 - MEG Visualization.ipynb
+++ b/7 - MEG Visualization.ipynb
@@ -22,13 +22,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"meg_experiment.png\">"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -276,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e25e47e468c40bc8efc6b9c8e367c8a",
+       "model_id": "bf7a370c438a45fcb501abae04d6cd92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,7 +284,7 @@
    "source": [
     "fig2 = plt.figure(min_aspect_ratio=1, max_aspect_ratio=1, title='Seen from above',\n",
     "                  layout={'min_width': '600px', 'min_height': '600px'})\n",
-    "sc_c = ColorScale(colors=['orangered', 'black', 'deepskyblue'], min=data_mean.min()* 1e15, max=data_mean.max()* 1e15)\n",
+    "sc_c = ColorScale(colors=['orangered', 'white', 'deepskyblue'], min=data_mean.min()* 1e15, max=data_mean.max()* 1e15)\n",
     "scat = plt.scatter(x, y, colors=colors, scales={'color': sc_c},\n",
     "                   axes_options={'x': {'visible': False}, 'y': {'visible': False}})\n",
     "plt.show()"
@@ -299,38 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eec4d6307ee4d53baa435a995d40ead",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee72a001e82345d7b9996d179f879328",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def update_colors(name, value):\n",
     "    sel = l.selected\n",
@@ -366,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -393,40 +357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "739c82c23c4b47b9aa5b4b68bd416c9f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a94b0f85be2c4073b2278887d741a50a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "red, black, blue = np.array([255, 69, 0])/255, np.array([.2, .2, .2]), np.array([0, 191, 255])/255\n",
+    "red, black, blue = np.array([255, 69, 0])/255, np.array([1., 1., 1.]), np.array([0, 191, 255])/255\n",
     "col_sc = diverging_color_scale(data_mean, [red, black, blue])\n",
     "precomputed_colors = np.array([[rgb_to_css(col_sc(d)) for d in di] for di in data_mean])\n",
     "\n",
