--- a/5 - MNIST Visualization.ipynb
+++ b/5 - MNIST Visualization.ipynb
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1745,73 +1745,93 @@
    "source": [
     "index = 228\n",
     "print('Actual {}, Predicted: {}'.format(y_train[index],\n",
-    "                                        np.argmax(model.predict(x_train_k[index, :, :, :].reshape(1, 28, 28, -1))) + 1))"
+    "                                        np.argmax(model.predict(x_train_k[index, :, :, :].reshape(1, 28, 28, -1)))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "1/1 [==============================] - 0s - loss: 0.0416 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.2068e-05 - acc: 1.0000\n",
       "Epoch 2/20\n",
-      "1/1 [==============================] - 0s - loss: 4.5956e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.1829e-05 - acc: 1.0000\n",
       "Epoch 3/20\n",
-      "1/1 [==============================] - 0s - loss: 4.5479e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.1531e-05 - acc: 1.0000\n",
       "Epoch 4/20\n",
-      "1/1 [==============================] - 0s - loss: 4.5062e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.1233e-05 - acc: 1.0000\n",
       "Epoch 5/20\n",
-      "1/1 [==============================] - 0s - loss: 4.4704e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.0876e-05 - acc: 1.0000\n",
       "Epoch 6/20\n",
-      "1/1 [==============================] - 0s - loss: 4.4228e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.0637e-05 - acc: 1.0000\n",
       "Epoch 7/20\n",
-      "1/1 [==============================] - 0s - loss: 4.3810e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.0339e-05 - acc: 1.0000\n",
       "Epoch 8/20\n",
-      "1/1 [==============================] - 0s - loss: 4.3393e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 3.0160e-05 - acc: 1.0000\n",
       "Epoch 9/20\n",
-      "1/1 [==============================] - 0s - loss: 4.2976e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.9803e-05 - acc: 1.0000\n",
       "Epoch 10/20\n",
-      "1/1 [==============================] - 0s - loss: 4.2559e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.9564e-05 - acc: 1.0000\n",
       "Epoch 11/20\n",
-      "1/1 [==============================] - 0s - loss: 4.2201e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.9207e-05 - acc: 1.0000\n",
       "Epoch 12/20\n",
-      "1/1 [==============================] - 0s - loss: 4.1843e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.8968e-05 - acc: 1.0000\n",
       "Epoch 13/20\n",
-      "1/1 [==============================] - 0s - loss: 4.1426e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.8730e-05 - acc: 1.0000\n",
       "Epoch 14/20\n",
-      "1/1 [==============================] - 0s - loss: 4.1009e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.8372e-05 - acc: 1.0000\n",
       "Epoch 15/20\n",
-      "1/1 [==============================] - 0s - loss: 4.0651e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.8134e-05 - acc: 1.0000\n",
       "Epoch 16/20\n",
-      "1/1 [==============================] - 0s - loss: 4.0234e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.7836e-05 - acc: 1.0000\n",
       "Epoch 17/20\n",
-      "1/1 [==============================] - 0s - loss: 3.9936e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.7538e-05 - acc: 1.0000\n",
       "Epoch 18/20\n",
-      "1/1 [==============================] - 0s - loss: 3.9519e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.7240e-05 - acc: 1.0000\n",
       "Epoch 19/20\n",
-      "1/1 [==============================] - 0s - loss: 3.9221e-05 - acc: 1.0000\n",
+      "1/1 [==============================] - 0s - loss: 2.7001e-05 - acc: 1.0000\n",
       "Epoch 20/20\n",
-      "1/1 [==============================] - 0s - loss: 3.8863e-05 - acc: 1.0000\n"
+      "1/1 [==============================] - 0s - loss: 2.6703e-05 - acc: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x12fe60ef0>"
+       "<keras.callbacks.History at 0x12f6d8be0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.fit(x_train_k[index, :, :, :].reshape(1, 28, 28, -1), y_train_k[index, :].reshape(1, 10), epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual 3, Predicted: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Actual {}, Predicted: {}'.format(y_train[index],\n",
+    "                                        np.argmax(model.predict(x_train_k[index, :, :, :].reshape(1, 28, 28, -1)))))"
    ]
   },
   {
