--- a/6 - Mobile Patent Suits.ipynb
+++ b/6 - Mobile Patent Suits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -57,18 +57,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "777576a87ef5484c9cf713d57fd1cc22",
-       "version_major": "2",
-       "version_minor": "0"
+       "model_id": "a043dc6fddbf4a4d82a4472035d2ce9f",
+       "version_major": 2,
+       "version_minor": 0
       },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>Figure</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
       "text/plain": [
-       "A Jupyter Widget"
+       "Figure(fig_margin={'top': 60, 'bottom': 60, 'left': 60, 'right': 60}, layout=Layout(height='900px', width='1000px'), marks=[Graph(colors=['gray'], interactions={'hover': 'tooltip', 'click': 'select'}, link_data=[{'source': 1, 'target': 16, 'value': 'licensing'}, {'source': 1, 'target': 17, 'value': 'licensing'}, {'source': 11, 'target': 6, 'value': 'suit'}, {'source': 0, 'target': 6, 'value': 'suit'}, {'source': 19, 'target': 6, 'value': 'resolved'}, {'source': 17, 'target': 6, 'value': 'suit'}, {'source': 12, 'target': 6, 'value': 'suit'}, {'source': 1, 'target': 9, 'value': 'suit'}, {'source': 1, 'target': 15, 'value': 'suit'}, {'source': 3, 'target': 2, 'value': 'suit'}, {'source': 6, 'target': 17, 'value': 'suit'}, {'source': 1, 'target': 14, 'value': 'suit'}, {'source': 11, 'target': 12, 'value': 'resolved'}, {'source': 8, 'target': 12, 'value': 'resolved'}, {'source': 4, 'target': 12, 'value': 'suit'}, {'source': 7, 'target': 8, 'value': 'suit'}, {'source': 12, 'target': 8, 'value': 'resolved'}, {'source': 6, 'target': 19, 'value': 'resolved'}, {'source': 5, 'target': 19, 'value': 'resolved'}, {'source': 6, 'target': 0, 'value': 'suit'}, {'source': 1, 'target': 0, 'value': 'suit'}, {'source': 0, 'target': 1, 'value': 'suit'}, {'source': 18, 'target': 13, 'value': 'suit'}, {'source': 10, 'target': 13, 'value': 'suit'}, {'source': 12, 'target': 11, 'value': 'resolved'}, {'source': 6, 'target': 11, 'value': 'suit'}, {'source': 12, 'target': 4, 'value': 'suit'}, {'source': 19, 'target': 5, 'value': 'suit'}], node_data=[{'label': 'Motorola', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Microsoft', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Google', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Oracle', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'RIM', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Qualcomm', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Apple', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Sony', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'LG', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Barnes & Noble', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Ericsson', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Samsung', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Kodak', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'ZTE', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Inventec', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Foxconn', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Amazon', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'HTC', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Huawei', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}, {'label': 'Nokia', 'shape_attrs': {'r': 6}, 'label_display': 'outside'}], scales={'link_color': OrdinalColorScale(colors=['limegreen', 'dodgerblue', 'orangered'], domain=['licensing', 'suit', 'resolved'])}, scales_metadata={'x': {'orientation': 'horizontal', 'dimension': 'x'}, 'y': {'orientation': 'vertical', 'dimension': 'y'}, 'color': {'dimension': 'color'}, 'link_color': {'dimension': 'link_color'}}, tooltip_style={'opacity': 0.9})], scale_x=LinearScale(allow_padding=False, max=1.0, min=0.0), scale_y=LinearScale(allow_padding=False, max=1.0, min=0.0), title='Mobile Patent Suits')"
       ]
      },
      "metadata": {},
@@ -95,6 +110,15 @@
     "              directed=True, link_distance=100, charge=-600)\n",
     "Figure(marks=[graph], layout=Layout(height='900px', width='1000px'), title='Mobile Patent Suits')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
